@@ -99,5 +99,11 @@ EpicsPvTimeLong::~EpicsPvTimeLong() {}
 
 EpicsPvTimeDouble::~EpicsPvTimeDouble() {}
 
+
+PvConfigV1::~PvConfigV1() {}
+
+
+ConfigV1::~ConfigV1() {}
+
 } // namespace Epics
 } // namespace Psana
